[gd_scene load_steps=49 format=3 uid="uid://uv5cdmohgonf"]

[ext_resource type="Script" uid="uid://bse1jlaj2rxju" path="res://scripts/game_manager.gd" id="1_itnma"]
[ext_resource type="FontFile" uid="uid://cbt5xvtsjjscv" path="res://assets/fonts/PixelOperator8.ttf" id="2_6nuav"]
[ext_resource type="Texture2D" uid="uid://g20jxsui8jgl" path="res://assets/sprites/knight.png" id="3_6nuav"]
[ext_resource type="Texture2D" uid="uid://dys1bcilre0k8" path="res://assets/sprites/crown.png" id="4_oo155"]
[ext_resource type="PackedScene" uid="uid://clr6kwflr7th0" path="res://scenes/options_button.tscn" id="5_ternb"]
[ext_resource type="PackedScene" uid="uid://bnpcvdejvocva" path="res://scenes/quit_button.tscn" id="6_q8mjp"]
[ext_resource type="PackedScene" uid="uid://5dm8m5rvtcnp" path="res://scenes/level_select_button.tscn" id="7_q8mjp"]
[ext_resource type="AudioStream" uid="uid://8cw2fafkka61" path="res://assets/sounds/win.mp3" id="8_jdad8"]
[ext_resource type="AudioStream" uid="uid://qm1etevvbb5f" path="res://assets/sounds/collectible_pickup.mp3" id="9_k4jhu"]
[ext_resource type="PackedScene" uid="uid://cf52cbj4eam28" path="res://scenes/pause_menu.tscn" id="10_frtjd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_6nuav")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_6nuav")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_6nuav")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_6nuav")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_6nuav")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_6nuav")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("3_6nuav")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_6nuav")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_6nuav")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("3_6nuav")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("3_6nuav")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("3_6nuav")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("3_6nuav")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("3_6nuav")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("3_6nuav")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_6nuav")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("3_6nuav")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("3_6nuav")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_6nuav")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_6nuav")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_6nuav")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_6nuav")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_6nuav")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_6nuav")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_6nuav")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_6nuav")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_6nuav")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_6nuav")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_6nuav")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_6nuav")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_6nuav")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6nuav"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": false,
"name": &"dash",
"speed": 21.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": false,
"name": &"dead",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[node name="GameManager" type="CanvasLayer"]
layer = 2
script = ExtResource("1_itnma")

[node name="ScoreRect" type="ColorRect" parent="." groups=["LevelGroup", "WinGroup"]]
z_index = 2
offset_right = 320.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.392157)

[node name="ScoreLabel" type="Label" parent="ScoreRect" groups=["LevelGroup"]]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.027451, 0.105882, 1, 1)
theme_override_fonts/font = ExtResource("2_6nuav")
theme_override_font_sizes/font_size = 32
text = "Coins: 12/12"
autowrap_mode = 2

[node name="DeadLabel" type="Label" parent="." groups=["DeadGroup"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.785093, 0, 0.219485, 1)
theme_override_fonts/font = ExtResource("2_6nuav")
theme_override_font_sizes/font_size = 64
text = "You have died"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="." groups=["DeadGroup", "WinGroup"]]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.588235, 0.588235, 0.588235, 0.901961)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ColorRect"]
position = Vector2(593, 427)
scale = Vector2(7.73437, 7.73437)
sprite_frames = SubResource("SpriteFrames_6nuav")
animation = &"idle"

[node name="WinLabel" type="Label" parent="." groups=["WinGroup"]]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -377.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.194612, 0.45595, 0.204326, 1)
theme_override_fonts/font = ExtResource("2_6nuav")
theme_override_font_sizes/font_size = 64
text = "Level x Won!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CrownSprite" type="Sprite2D" parent="." groups=["WinGroup"]]
z_index = 1
position = Vector2(717, 306)
scale = Vector2(0.24788, 0.231818)
texture = ExtResource("4_oo155")

[node name="OptionsButton" parent="." groups=["WinGroup"] instance=ExtResource("5_ternb")]
offset_left = 486.0
offset_top = 398.0
offset_right = 4886.0
offset_bottom = 4878.0
scale = Vector2(0.05, 0.05)

[node name="QuitButton" parent="." groups=["WinGroup"] instance=ExtResource("6_q8mjp")]
offset_left = 813.0
offset_top = 407.0
offset_right = 1493.0
offset_bottom = 1117.0
scale = Vector2(0.3, 0.3)

[node name="LevelSelectButton" parent="." groups=["WinGroup"] instance=ExtResource("7_q8mjp")]
offset_left = 160.0
offset_top = 385.0
offset_right = 1056.0
offset_bottom = 1312.0
scale = Vector2(0.26, 0.26)

[node name="VictorySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jdad8")
volume_db = -8.0
bus = &"SFX"

[node name="CollectiblePickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_k4jhu")

[node name="PauseMenu" type="CanvasLayer" parent="." groups=["LevelGroup"]]

[node name="Pause_Menu" parent="PauseMenu" instance=ExtResource("10_frtjd")]

[node name="WinRequirementsTextBox" type="CanvasLayer" parent="." groups=["LevelGroup"]]
layer = 0

[node name="WinRequirementsTextBox" type="MarginContainer" parent="WinRequirementsTextBox"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="WinRequirementsTextBox/WinRequirementsTextBox"]
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="WinRequirementsTextBox/WinRequirementsTextBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="WinRequirementsTextBox/WinRequirementsTextBox/MarginContainer"]
z_index = 5
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_6nuav")
text = "Requirements:"
vertical_alignment = 1
autowrap_mode = 2

[connection signal="ready" from="." to="." method="_on_ready"]
